dark mode problem resolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,8 +18,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #171717;
     --primary: #F97316;
     --custom-black: #2E2E2E;
     --custom-light-black: #434343;
